[ANW-292] Fixed overlapping primary tabs.

--- a/drupal/sites/all/themes/custom/nas/css/app.css
+++ b/drupal/sites/all/themes/custom/nas/css/app.css
@@ -8478,6 +8478,11 @@ body.black-bg .slide-caption {
   color: #fff;
 }
 
+body.node-type-slideshow #tabs {
+  position: relative;
+  z-index: 10;
+}
+
 .conservation-slider {
   position: relative;
   -webkit-font-smoothing: subpixel-antialiased;
