--- a/drupal/sites/all/themes/custom/nas/scss/modules/_slideshow.scss
+++ b/drupal/sites/all/themes/custom/nas/scss/modules/_slideshow.scss
@@ -226,3 +226,11 @@ body.black-bg {
     color: $color-white;
   }
 }
+
+// Fix overlapping primary tabs.
+body.node-type-slideshow {
+  #tabs {
+    position: relative;
+    z-index: 10;
+  }
+}
